# e-tender

./: .env.example  .gitignore  DEPLOYMENTS.md  README.md  ZK_INTEGRATION.md  foundry.toml  remappings.txt
.github/workflows/: ci.yml  rust.yml  security.yml
attack-simulations/: MEVSim.t.sol  TimestampSim.t.sol
benchmarks/: .gas-snapshot
circuits/: Cargo.toml  README.md
circuits/src/: lib.rs  main.rs  merkle_circuit.rs  nullifier_circuit.rs  range_circuit.rs  range_proof.rs  verifier.rs  verifier_sol.rs
contracts/: Tender.sol  TenderFactory.sol
contracts/compliance/: ComplianceModule.sol
contracts/crypto/: ZKRangeVerifier.sol
contracts/identity/: SignatureVerifier.sol  ZKMerkleVerifier.sol
contracts/interfaces/: IEvaluationStrategy.sol
contracts/strategies/: LowestPriceStrategy.sol  WeightedScoreStrategy.sol  ZKAuctionStrategy.sol
docs/: CROSSCHAIN.md  STRATEGIES.md  UI_INTEGRATION.md  final-report.md  protocol-summary.md
docs/security/: threat-model.md
docs/specs/: assumptions_trust.md  state-machine.md
formal-invariants/: TenderHandler.sol  TenderInvariants.t.sol
notes/: code-0.md  code-1.md  code-2.md  code-3.md  code-4.md  code-5.md  code-6.md  implementation-0.md  implementation-1.md  implementation-2.md  implementation-3.md  implementation-6.md  task.md  walkthrough-0.md  walkthrough-1.md  walkthrough-2.md  walkthrough-3.md  walkthrough-4.md  walkthrough-5.md  walkthrough-7.md
notes/code-explaination/: code-1.md  code-2.md  code-3.md  code-4.md  code-5.md  code-7.md  code-8.md
notes/implementation-plan/: implementation-0.md  implementation-1.md  implementation-2.md  implementation-3.md  implementation-4.md  implementation-5.md  implementation-7.md  implementation-8.md
notes/walkthrough-timeline/: walkthrough-1.md  walkthrough-2.md  walkthrough-3.md  walkthrough-4.md  walkthrough-6.md  walkthrough-7.md  walkthrough-8.md
script/: Deploy.s.sol  DeployCCIP.s.sol  DeployZKVerifier.s.sol
specs/: assumptions_trust.md  state-machine.md
src/: Tender.sol  TenderFactory.sol
src/compliance/: ComplianceModule.sol
src/core/: README.md  Tender.sol  TenderFactory.sol
src/crosschain/: CrossChainAdapter.sol
src/crypto/: Halo2MerkleVerifier.sol  Halo2NullifierVerifier.sol  Halo2Verifier.sol  ZKRangeVerifier.sol
src/identity/: SignatureVerifier.sol  ZKMerkleVerifier.sol  ZKNullifierVerifier.sol
src/interfaces/: ICrossChainAdapter.sol  IEvaluationStrategy.sol  IIdentityVerifier.sol  ITenderHelper.sol
src/libraries/: TenderConstants.sol
src/strategies/: LowestPriceStrategy.sol  WeightedScoreStrategy.sol  ZKAuctionStrategy.sol
test/: Disputes.t.sol  Identity.t.sol  Strategies.t.sol  Tender.t.sol
test/integration/: MEVSim.t.sol  TimestampSim.t.sol
test/invariants/: TenderHandler.sol  TenderInvariants.t.sol
test/simulations/: MEVSim.t.sol  TimestampSim.t.sol
test/unit/: CrossChainAdapter.t.sol  Disputes.t.sol  Identity.t.sol  Strategies.t.sol  Tender.t.sol  ZKAuctionStrategy.t.sol  ZKRangeVerifier.t.sol
