[package]
name = "range-proof-circuit"
version = "0.1.0"
edition = "2021"
description = "Halo2 range proof circuit for e-tendering protocol"
license = "MIT"

[lib]
name = "range_proof"
path = "src/lib.rs"

[[bin]]
name = "range-proof-cli"
path = "src/main.rs"

[dependencies]
# Halo2 proving system (use crates.io versions)
halo2_proofs = "0.3"
halo2curves = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"

# Random number generation
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "thin"

