[package]
name = "range-proof-circuit"
version = "0.1.0"
edition = "2021"
description = "Halo2 range proof circuit for e-tendering protocol"
license = "MIT"

[lib]
name = "range_proof"
path = "src/lib.rs"

[[bin]]
name = "range-proof-cli"
path = "src/main.rs"

[dependencies]
# Axiom's halo2-lib stack (production-grade, powers Axiom, Scroll, etc.)
# Using halo2-axiom backend (default, faster proving)
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v0.5.0-git", default-features = false, features = ["halo2-axiom"] }

# Verifier generation
snark-verifier = { git = "https://github.com/axiom-crypto/snark-verifier", branch = "main", default-features = false, features = ["halo2-axiom"] }
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier", branch = "main", default-features = false, features = ["halo2-axiom", "loader_evm", "loader_halo2"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
tiny-keccak = { version = "2.0", features = ["keccak"] }

# Random number generation
rand = "0.8"



[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
